home/Deployments/wireguard/StatefulSet.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: wireguard-app
  namespace: wireguard-system
spec:
  serviceName: wireguard-app-svc
  replicas: 2
  selector:
    matchLabels:
      app: wireguard-app
  template:
    metadata:
      labels:
        app: wireguard-app
    spec:
      containers:
        - name: wireguard
          image: lscr.io/linuxserver/wireguard:latest
          ports:
            - containerPort: 51820
          volumeMounts:
            - name: wireguard-mount
              mountPath: /config
      volumes:
      - name: wireguard-mount
        persistentVolumeClaim:
          claimName: wireguard-pvc
