home/Deployments/wireguard/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wireguard-svc
  namespace: wireguard-system
  labels:
    app: wireguard-svc
spec:
  ports:
  - port: 51820
    name: web
  selector:
    app: wireguard-app
